src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

:root {
  --ifm-font-family-base: 'Open Sans', sans-serif;

  --ifm-color-primary: #0068ff;
  --ifm-color-primary-dark: #005ee6;
  --ifm-color-primary-darker: #0058d9;
  --ifm-color-primary-darkest: #0049b3;
  --ifm-color-primary-light: #1a77ff;
  --ifm-color-primary-lighter: #267fff;
  --ifm-color-primary-lightest: #4d95ff;

  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);

  --ifm-global-radius: 0.5rem;
  --ifm-button-color: #fff;

  --ads-by-google-background-color: var(--ifm-color-gray-100);
}

[data-theme='dark'] {
  --ifm-color-primary: #3989ff;
  --ifm-color-primary-dark: #1a76ff;
  --ifm-color-primary-darker: #0a6dff;
  --ifm-color-primary-darkest: #0058da;
  --ifm-color-primary-light: #589cff;
  --ifm-color-primary-lighter: #68a5ff;
  --ifm-color-primary-lightest: #97c1ff;

  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);

  --ads-by-google-background-color: #161617;
  /* var(--ifm-color-gray-900); */
}

.navbar__title {
  font-size: 1.25rem;
}

.medium-zoom-image--opened, .medium-zoom-overlay {
  z-index: var(--ifm-z-index-overlay);
}

.whats-new {
  display: inline-flex;
  justify-content: center;
  margin-bottom: 1rem;
  padding: 0.25rem 1rem;
  border: 1px solid var(--ifm-color-gray-700);
  border-radius: 50rem;
  color: var(--ifm-font-color-base);
  font-size: 0.875rem;
}

.whats-new:hover {
  text-decoration: none;
}

/* .alert {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
} */

.button--outline:hover {
  --ifm-button-color: #fff;
}

.w-full {
  width: 100%;
}

.gap-4 {
  gap: 1rem;
}

div[class^=announcementBar_] .close {
  color: #fff;
}

.digitalocean-badge,
.dmca-badge {
  display: inline-block;
}

.digitalocean-badge {
  margin-top: 1rem;
}

.flex {
  display: flex;
}

.text-center {
  text-align: center;
}

.text-balance {
  text-wrap: balance;
}

.adsbygoogle {
  background-color: var(--ads-by-google-background-color);
}

.navbar__link svg {
  position: relative;
  top: 1px;
}

.theme-doc-sidebar-menu .adsbygoogle {
  margin-right: 0.5rem;
  margin-top: 0.5rem;
  background-color: transparent;
}

.header-github-link:before {
  background-color: var(--ifm-navbar-link-color);
  content: "";
  display: flex;
  height: 22px;
  -webkit-mask-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E");
  mask-image: url("data:image/svg+xml;charset=utf-8,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E");
  width: 22px;
  position: relative;
  top: -1px;
}

